--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@ bin-release/
 .settings/
 
 # Executables
-*.swf
-*.air
-*.ipa
-*.apk
+#*.swf
+#*.air
+#*.ipa
+#*.apk
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
